# nullherz

./: .gitignore  4channel_graph.json  :memory:  AGENTS.md  ANAWAVES_GENETIC_SCHEMA_RFC.md  ARCHITECTURE.md  BUGS.md  COMPETITOR_COMPARISON.md  Cargo.toml  ECOSYSTEM_MATRIX.md  ENGINEERING_HARDENING_MANIFESTO.md  FEATURE_MATRIX.md  FINAL_AUDIT_REPORT.md  MARKET_VIABILITY_STRATEGY.md  NEXT_SESSION_PROMPT.md  PRODUCTION_STATUS.md  PROMPT_PHASE_4.md  README.md  ROADMAP.md  ROADMAP_3MONTH.md  SDK_DEVELOPER_GUIDE.md  SIDECAR_PROTOCOL_V2.md  SOLUTION_DESIGN_OPTIMIZATION.md  STRATEGIC_PRE_FLIGHT_CHECKLIST.md  SYSTEM_DESIGN.md  SYSTEM_STATUS.md  SYSTEM_STATUS_REPORT.md  TECHNICAL_OPTIMIZATION_LOG.md  autosave.json  autosave.rkyv  clippy.toml  fix_unsafe.py  graph.json  gui_broadcast.ppm  gui_mastering.ppm  gui_mixer.ppm  gui_sampler.ppm  gui_screenshot.ppm  gui_topology.ppm  highend_dj_studio.ppm  (+3 more)
.githooks/: pre-push
crates/audio-core/: Cargo.toml
crates/audio-core/examples/: graph_swap.rs  sidecar_example.rs  simple_engine.rs
crates/audio-core/proptest-regressions/processors/graph/: compiler.txt
crates/audio-core/src/: decoupling_tests.rs  engine.rs  engine_tests.rs  error.rs  integration_tests.rs  lib.rs  rt_logging.rs  telemetry.rs  tests.rs  traits.rs
crates/audio-core/src/backends/: alsa.rs  jack.rs  mod.rs  pipewire.rs  threaded.rs
crates/audio-core/src/engine/: builder.rs  command_dispatcher.rs  graph_manager.rs  input_handler.rs  metrics.rs  mod.rs  processing_kernel.rs  recycler.rs  resource_recycler.rs  sample_registry.rs  telemetry_collector.rs  telemetry_finalizer.rs
crates/audio-core/src/graph/: mod.rs
crates/audio-core/src/processors/: complex.rs  graph.rs  mod.rs  sampler.rs  sidecar.rs  standard.rs
crates/audio-core/src/processors/graph/: buffer_pool.rs  compiler.rs  executor.rs  mod.rs  node.rs  pool.rs  telemetry.rs  topology_coordinator.rs  topology_types.rs  verification.rs
crates/fx-runtime/: Cargo.toml
crates/fx-runtime/src/: lib.rs  protocol.rs  resource_limiter.rs  wasm_runtime.rs
crates/ipc-layer/: Cargo.toml  IPC_STRATEGY.md  build.rs
crates/ipc-layer/src/: lib.rs  tcp.rs
crates/nullherz-bench/: Cargo.toml
crates/nullherz-bench/src/: main.rs
crates/nullherz-bridge/: Cargo.toml
crates/nullherz-bridge/src/: lib.rs  main.rs
crates/nullherz-conductor/: Cargo.toml
crates/nullherz-conductor/examples/: bench_console_block.rs  profile_console_nodes.rs
crates/nullherz-conductor/proptest-regressions/: ptp_engine.txt
crates/nullherz-conductor/src/: analysis_kernel.rs  analysis_worker.rs  backend.rs  bounce.rs  clip_orchestrator.rs  command_handler.rs  discovery.rs  engine_coordinator.rs  folder_monitor.rs  genetic_sequencer.rs  ipc_audio_bridge.rs  lib.rs  main.rs  midi_clock.rs  midi_mapper.rs  midi_sequence_kernel.rs  mixer_bridge.rs  mixer_orchestrator.rs  mixing_test.rs  modulation_matrix.rs  orchestrator.rs  pattern_manager.rs  persistence.rs  ptp_engine.rs  sidecar_supervisor.rs  streaming_manager.rs  telemetry_service.rs  timeline.rs  topology_manager.rs  transfusion_manager.rs  wav.rs
crates/nullherz-conductor/tests/: analysis_tests.rs  async_hydration_test.rs  golden_master_render_test.rs  midi_tests.rs  modulation_tests.rs  pattern_manager_tests.rs  persistence_tests.rs  playback_regression_test.rs
crates/nullherz-conductor/tests/fixtures/: golden_master.f32
crates/nullherz-dna/: Cargo.toml
crates/nullherz-dna/examples/: bench_library_query.rs
crates/nullherz-dna/src/: consensus.rs  curation.rs  lib.rs  library.rs  matchmaker.rs  network.rs  registry.rs  tests.rs  transfusion.rs
crates/nullherz-gateway/: Cargo.toml
crates/nullherz-gateway/src/: lib.rs  main.rs  tests.rs
crates/nullherz-inspector/: 4channel_graph.json  Cargo.toml  autosave.json  autosave.rkyv
crates/nullherz-inspector/src/: main.rs  state.rs  widgets.rs
crates/nullherz-inspector/src/views/: account.rs  breeder.rs  broadcast.rs  composer.rs  dj_studio.rs  editor.rs  genetic_cloud.rs  library.rs  mastering.rs  metrics.rs  mixer.rs  mod.rs  modulation.rs  notifications.rs  player.rs  sampler.rs  settings.rs  setup_wizard.rs  topology.rs
crates/nullherz-processors/: Cargo.toml
crates/nullherz-processors/fuzz/: Cargo.toml
crates/nullherz-processors/fuzz/fuzz_targets/: filter_fuzz.rs  gain_fuzz.rs
crates/nullherz-processors/src/: analysis.rs  biquad.rs  capture.rs  complex.rs  compressor.rs  crossfader.rs  delay.rs  dj_isolator.rs  dsp_kernel_processor.rs  factory.rs  fallback.rs  gain.rs  golden_render_tests.rs  granular.rs  keysync.rs  lib.rs  limiter.rs  modulation.rs  registry.rs  sampler.rs  sampler_slicer_tests.rs  sampler_tests.rs  sequencer.rs  sidecar.rs  spectral.rs  spectral_morph.rs  standard.rs  stereo_utility.rs  streaming_sampler.rs  summing.rs  wavetable.rs
crates/nullherz-processors/src/test_kit/: mod.rs  sidecar_mock.rs
crates/nullherz-processors/src/transfusion/: capture.rs  dna_morpher.rs  envelope_follower.rs  granular.rs  mod.rs  personality_inheritance.rs  spectral_morph.rs
crates/nullherz-processors/tests/: conformance.rs  conformance_tests.rs
crates/nullherz-setup/: Cargo.toml
crates/nullherz-setup/src/: main.rs
crates/nullherz-topology/: Cargo.toml
crates/nullherz-topology/src/: compiler.rs  lib.rs
crates/nullherz-traits/: Cargo.toml
crates/nullherz-traits/src/: bus.rs  clock.rs  commands.rs  dna_schema.rs  error.rs  execution.rs  graph_plan.rs  kernel.rs  lib.rs  modulation.rs  serde_helpers.rs  telemetry.rs  tests.rs  topology.rs
crates/nullherz-traits/src/test_kit/: mod.rs
docs/: README.md
sidecars/distributed-sidecar/: Cargo.toml
sidecars/distributed-sidecar/src/: main.rs
sidecars/nullherz-broadcast/: Cargo.toml
sidecars/nullherz-broadcast/src/: lib.rs
sidecars/nullherz-dummy/: Cargo.toml
sidecars/nullherz-dummy/src/: main.rs
sidecars/nullherz-midi/: Cargo.toml
sidecars/nullherz-midi/src/: lib.rs  main.rs
sidecars/reference_dsp/: Cargo.toml
sidecars/reference_dsp/src/: main.rs
sidecars/spectral-transfuser/: Cargo.toml
sidecars/spectral-transfuser/src/: main.rs
(+92 files in other folders)
