[workspace]
members = [
    "crates/audio-core",
    "crates/audio-dsp",
    "crates/fx-runtime",
    "crates/control-plane",
    "crates/ipc-layer",
    "crates/sidecar-sdk",
    "crates/sidecar-macros",
    "crates/nullherz-inspector", "crates/nullherz-mixer", "crates/nullherz-conductor", "crates/nullherz-bench", "sidecars/nullherz-sampler", "sidecars/nullherz-broadcast", "sidecars/nullherz-midi",
]
resolver = "2"
