[workspace]
members = [
    "crates/nullherz-traits",
    "crates/nullherz-processors",
    "crates/nullherz-backends",
    "crates/audio-core",
    "crates/audio-dsp",
    "crates/fx-runtime",
    "crates/control-plane",
    "crates/ipc-layer",
    "crates/sidecar-sdk",
    "crates/sidecar-macros",
    "crates/nullherz-inspector", "crates/nullherz-mixer", "crates/nullherz-conductor", "sidecars/nullherz-sampler", "sidecars/nullherz-broadcast", "sidecars/nullherz-midi",
    "crates/nullherz-bench", "sidecars/nullherz-dummy",
    "crates/nullherz-gateway",
    "crates/nullherz-topology",
    "crates/nullherz-setup",
]
resolver = "2"
