[package]
name = "audio-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
audio-dsp = { path = "../audio-dsp" }
control-plane = { path = "../control-plane" }
ipc-layer = { path = "../ipc-layer" }
libc = "0.2"

[dev-dependencies]
sidecar-sdk = { path = "../sidecar-sdk" }
