[package]
name = "audio-core"
version = "0.1.0"
edition = "2024"

[features]
test-utils = ["nullherz-traits/test-utils"]
kani-verify = ["nullherz-traits/kani-verify"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dyn-clone = "1.0"
serde-big-array = "0.5"
nullherz-traits = { path = "../nullherz-traits" }
nullherz-topology = { path = "../nullherz-topology" }
nullherz-dna = { path = "../nullherz-dna" }
audio-dsp = { path = "../audio-dsp" }
ipc-layer = { path = "../ipc-layer" }
libc = "0.2"
wide = "0.7.30"

[dev-dependencies]
sidecar-sdk = { path = "../sidecar-sdk" }
nullherz-backends = { path = "../nullherz-backends" }
nullherz-processors = { path = "../nullherz-processors" }
proptest = "1.6"
