[package]
name = "fx-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
audio-core = { path = "../audio-core" }
nullherz-traits = { path = "../nullherz-traits" }
nullherz-processors = { path = "../nullherz-processors" }
audio-dsp = { path = "../audio-dsp" }
ipc-layer = { path = "../ipc-layer" }
