[package]
name = "ipc-layer"
version = "0.1.0"
edition = "2024"

[features]
kani-verify = []

[dependencies]
parking_lot = "0.12"
libc = "0.2"
nix = { version = "0.29", features = ["sched"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytemuck = "1.14"
nullherz-traits = { path = "../nullherz-traits" }

[dev-dependencies]
proptest = "1.6"
