[package]
name = "nullherz-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
audio-core = { path = "../audio-core" }
control-plane = { path = "../control-plane" }
ipc-layer = { path = "../ipc-layer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.21"
mio = { version = "0.8", features = ["os-poll", "net"] }
