[package]
name = "nullherz-conductor"
version = "0.1.0"
edition = "2024"

[dependencies]
control-plane = { path = "../control-plane" }
nullherz-backends = { path = "../nullherz-backends" }
audio-core = { path = "../audio-core" }
nullherz-processors = { path = "../nullherz-processors" }
nullherz-traits = { path = "../nullherz-traits" }
fx-runtime = { path = "../fx-runtime" }
ipc-layer = { path = "../ipc-layer" }
tokio = { version = "1.0", features = ["full"] }
nullherz-mixer = { path = "../nullherz-mixer" }
serde_json = "1.0"
nullherz-gateway = { path = "../nullherz-gateway" }
