[package]
name = "nullherz-conductor"
version = "0.1.0"
edition = "2024"

[dependencies]
nullherz-backends = { path = "../nullherz-backends" }
audio-core = { path = "../audio-core" }
hound = "3.5"
nullherz-processors = { path = "../nullherz-processors" }
nullherz-traits = { path = "../nullherz-traits" }
nullherz-dna = { path = "../nullherz-dna" }
nullherz-topology = { path = "../nullherz-topology" }
fx-runtime = { path = "../fx-runtime" }
ipc-layer = { path = "../ipc-layer" }
tokio = { version = "1.0", features = ["full"] }
nullherz-mixer = { path = "../nullherz-mixer" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
nullherz-gateway = { path = "../nullherz-gateway" }
audio-dsp = { path = "../audio-dsp" }
