[package]
name = "nullherz-dna"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5"
nullherz-traits = { path = "../nullherz-traits" }
audio-dsp = { path = "../audio-dsp" }
redb = "2.1"
rayon = "1.10"
mdns-sd = "0.11"
gethostname = "0.4"
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

[dev-dependencies]
socket2 = "0.5"
