[package]
name = "nullherz-gateway"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "nullherz-gateway"
path = "src/main.rs"

[dependencies]
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
audio-core = { path = "../audio-core" }
nullherz-traits = { path = "../nullherz-traits" }
nullherz-dna = { path = "../nullherz-dna" }
ipc-layer = { path = "../ipc-layer" }
