[package]
name = "nullherz-inspector"
version = "0.1.0"
edition = "2024"

[dependencies]
nullherz-traits = { path = "../../crates/nullherz-traits" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui = "0.27"
eframe = { version = "0.27", features = ["wgpu"] }
audio-core = { path = "../audio-core" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
nullherz-dna = { path = "../nullherz-dna" }
nullherz-ui-hal = { path = "../nullherz-ui-hal" }
egui-wgpu = "0.27"
