[package]
name = "nullherz-processors"
version = "0.1.0"
edition = "2024"

[dependencies]
nullherz-traits = { path = "../nullherz-traits", features = ["test-utils"] }
audio-dsp = { path = "../audio-dsp" }
control-plane = { path = "../control-plane" }
ipc-layer = { path = "../ipc-layer" }
wide = "0.7.30"
serde = { version = "1.0", features = ["derive"] }

[features]
test-utils = []
