[package]
name = "nullherz-setup"
version = "0.1.0"
edition = "2024"

[features]
default = ["midir-backend", "cpal-backend"]
midir-backend = ["midir"]
cpal-backend = ["cpal"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
midir = { version = "0.9", optional = true }
cpal = { version = "0.15", optional = true }
