[package]
name = "nullherz-topology"
version = "0.1.0"
edition = "2024"

[features]
kani-verify = ["nullherz-traits/kani-verify"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
nullherz-traits = { path = "../nullherz-traits" }
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"

[dev-dependencies]
proptest = "1.6"
