[package]
name = "nullherz-traits"
version = "0.1.0"
edition = "2024"

[features]
test-utils = []
kani-verify = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
bincode = "1.3"
rkyv = { version = "0.7", features = ["validation", "size_32"] }
bytemuck = { version = "1.15", features = ["derive"] }
libc = "0.2"
dyn-clone = "1.0"
nix = { version = "0.29", features = ["socket", "time", "net", "uio"] }
