[package]
name = "distributed-sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
ipc-layer = { path = "../../crates/ipc-layer" }
nullherz-traits = { path = "../../crates/nullherz-traits" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytemuck = "1.15"
nullherz-dna = { path = "../../crates/nullherz-dna" }
