[package]
name = "nullherz-broadcast"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
nullherz-traits = { path = "../../crates/nullherz-traits" }
ipc-layer = { path = "../../crates/ipc-layer" }
sidecar-sdk = { path = "../../crates/sidecar-sdk" }
audio-core = { path = "../../crates/audio-core" }
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
