[package]
name = "nullherz-dummy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nullherz-sidecar-dummy"
path = "src/main.rs"

[dependencies]
nullherz-traits = { path = "../../crates/nullherz-traits" }
sidecar-sdk = { path = "../../crates/sidecar-sdk" }
audio-core = { path = "../../crates/audio-core" }
