[package]
name = "spectral-transfuser"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ipc-layer = { path = "../../crates/ipc-layer" }
nullherz-traits = { path = "../../crates/nullherz-traits" }
audio-dsp = { path = "../../crates/audio-dsp" }
bytemuck = "1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
